Included build.bat

--- a/TestPackageLibrary/TestPackageLibrary.csproj
+++ b/TestPackageLibrary/TestPackageLibrary.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="build.bat" />
     <None Include="TestPackage.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
